[package]
name = "guangzhou-metro"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
axum= "0.7.5"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
